--- a/workspace/14_OAuth/pom.xml
+++ b/workspace/14_OAuth/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.oauth.spring</groupId>
-	<artifactId>OAuth</artifactId>
+	<artifactId>14_OAuth</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
